--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "firebase": "^5.10.0",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-sweetalert2": "^1.6.4",
     "vuetify": "^1.5.5",
     "vuex": "^3.0.1"
   },
